made product card

--- a/frontend/ToDo.txt
+++ b/frontend/ToDo.txt
@@ -1,5 +1,1 @@
-1. Визначитись з стилем вибрати основні кольори шрифти. // Зроблено
-  //todo
-  1.1. Підчистити непотрібні фонти
-
-2. Подивитись до TextLine
+1.Лінки в категоріях
